respaldo-depuracion/2026-09-04-lote3-campos-objetos/objects/CSH_Shopping_Cart__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>E_Commerce_Offers_Selection__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>You will only see the E-Commerce Offers related to the Item Selection of the Account Shopping Cart.(true)</inlineHelpText>
        <label>E-Commerce Offers Selection</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Field_Order_Type_Authorized__c</fullName>
        <label>Field Order Type Authorized</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Items_Selection__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>All Items (false), Only Items in Price List (true)</inlineHelpText>
        <label>Items Selection</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Shopping_Cart_Type_Authorized__c</fullName>
        <inlineHelpText>The value ​​must be one these: Customer Shopping Cart or  Supplier Shopping Cart or Customer &amp; Supplier Shopping Cart</inlineHelpText>
        <label>Field Order Type Authorized</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CSH Field Order</label>
</CustomObject>